[gd_scene load_steps=5 format=2]

[ext_resource path="res://Ant.gd" type="Script" id=1]
[ext_resource path="res://ant.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0
height = 22.0

[sub_resource type="OccluderPolygon2D" id=2]
cull_mode = 1
polygon = PoolVector2Array( -2, -24, -4, -22, -11, -23, -16, -34, -18, -34, -13, -22, -5, -21, -7, -17, -7, -13, -6, -10, -2, -10, -4, -8, -4, -4, -9, -9, -10, -17, -17, -23, -18, -23, -18, -22, -12, -17, -11, -10, -9, -6, -5, -3, -4, -2, -4, 2, -13, 1, -16, 4, -17, 11, -24, 18, -15, 12, -13, 3, -3, 4, -3, 6, -14, 13, -14, 20, -14, 26, -17, 29, -18, 36, -13, 28, -11, 24, -12, 16, -3, 9, -3, 11, -7, 13, -9, 21, -5, 29, 0, 33, 5, 29, 9, 21, 8, 14, 2, 10, 2, 8, 12, 13, 13, 23, 18, 32, 18, 35, 19, 32, 16, 24, 14, 12, 2, 7, 2, 5, 13, 3, 16, 11, 26, 20, 18, 11, 15, 1, 2, 3, 2, -2, 8, -8, 10, -15, 15, -22, 9, -17, 6, -9, 2, -5, 2, -8, 1, -10, 4, -10, 5, -13, 4, -18, 2, -20, 9, -22, 15, -35, 8, -24, 1, -22 )

[node name="Ant" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )
speed = 100
sideRaysLength = 150
sideRaysAngle = 20
angleMaxRateChange = 1440.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="RayCast2D_R" type="RayCast2D" parent="."]
position = Vector2( 2.27374e-13, 0 )
rotation = 0.349066
enabled = true
cast_to = Vector2( 0, -200 )
collide_with_areas = true

[node name="RayCast2D_L" type="RayCast2D" parent="."]
position = Vector2( 9.53674e-07, 0 )
rotation = -0.349066
enabled = true
cast_to = Vector2( 0, -200 )
collide_with_areas = true

[node name="FieldOfView" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6
monitorable = false
angular_damp = 43.661

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="FieldOfView"]
self_modulate = Color( 0.00784314, 1, 0, 1 )
polygon = PoolVector2Array( -20, -20, -150, -150, 0, -250, 150, -150, 20, -20 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 2 )

[node name="DirectionRefreshRate" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="PheromoneSpawnRate" type="Timer" parent="."]
autostart = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[connection signal="area_entered" from="FieldOfView" to="." method="_on_FieldOfView_area_entered"]
[connection signal="body_entered" from="FieldOfView" to="." method="_on_FieldOfView_body_entered"]
[connection signal="timeout" from="DirectionRefreshRate" to="." method="_on_DirectionRefreshRate_timeout"]
[connection signal="timeout" from="PheromoneSpawnRate" to="." method="_on_PheromoneSpawnRate_timeout"]
